Package: R.filesets
===================

Version: 1.2.1 [2012-09-27]
o Now readDataFrame() for TabularTextFile defaults to read strings
  as characters rather than as factors.  To read strings as factors,
  just pass argument stringsAsFactors=TRUE.


Version: 1.2.0 [2012-09-25]
o Now R.filesets imports R.methodsS3, R.oo and R.utils.
  This solves issues such as trim() being overridden by ditto 
  from the IRanges package, iff loaded.


Version: 1.1.6 [2012-09-01]
o CONSISTENCY: Now extractMatrix() for GenericTabularFile adds column 
  names just as ditto for GenericTabularFileSet does.


Version: 1.1.5 [2012-03-06]
o CRAN POLICY: Removed all internal copies of 'base' functions that
  have .Internal() calls.


Version: 1.1.4 [2011-11-19]
o Now more methods for GenericDataFile and GenericDataFileSet handle
  so called "empty" files, which are files with NULL pathnames.


Version: 1.1.3 [2011-09-26]
o Added methods set- and getCommentChar() to TabularTextFile and
  argument 'commentChar' to its constructor.  This allows to use
  custom comment characters other than just "#".


Version: 1.1.2 [2011-09-11]
o BUG FIX: GenericDataFileSet$byName(..., subdirs) would throw 'Error
  in strsplit(subdirs, split = "/\\")' iff subdirs != NULL.
o Improved the handling of the newly introduced 'depth' parameter,
  e.g. by making it optional/backward compatible.


Version: 1.1.1 [2011-07-25]
o Added "depth" to GenericDataFileSet, such that one can correctly
  infer fullname and subdirs from the path.


Version: 1.1.0 [2011-07-24]
o Added a namespace to the package, which will be more or less
  a requirement in the next major release of R.


Version: 1.0.4 [2011-07-15]
o Added argument 'named' to getTags() for FullNameInterface.  If TRUE,
  tags of format "<name>=<value>" will be parsed and returned as a
  named "<value>", e.g. "foo,n=23,bar,n=42" is returned as
  c("foo", "n"="23", "bar", "n"="42").


Version: 1.0.3 [2011-07-13]