@@ -1,29 +1,32 @@
-# Setup a file set
-path <- system.file("exData", package="R.filesets")
-
-ds <- TabularTextFileSet$byName("dataSetA,original", pattern="[.]dat$", paths=path)
+# Setup a file set consisting of all *.dat tab-delimited files
+# in a particular directory
+path <- system.file("exData/dataSetA,original", package="R.filesets")
+ds <- TabularTextFileSet$byPath(path, pattern="[.]dat$")
 print(ds)
 
-dfList <- lapply(ds, readDataFrame)
-print(dfList)
 
-rows <- c(3:5, 8, 2);
-dfList <- lapply(ds, readDataFrame, rows=rows)
-print(dfList)
-
+# Read column 'y' and a subset of the rows from each of the 
+# tab-delimited files and combine into a matrix
+rows <- c(3:5, 8, 2)
 data <- extractMatrix(ds, column="y", colClass="integer", rows=rows)
 print(data)
 
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# Translation of fullnames
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# See also help("readDataFrame.TabularTextFileSet")
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# ADVANCED: Translation of fullnames
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 fnts <- TabularTextFileSet$byPath(getPath(ds), pattern=",fullnames[.]txt$")
 appendFullNamesTranslator(ds, as.list(fnts))
 
-verbose && cat(verbose, "Default fullnames:");
-verbose && print(verbose, head(getFullNames(ds, translate=FALSE)));
-verbose && cat(verbose, "Translated fullnames:");
-verbose && print(verbose, head(getFullNames(ds)));
+cat("Default fullnames:\n")
+print(head(getFullNames(ds, translate=FALSE)))
+cat("Translated fullnames:\n")
+print(head(getFullNames(ds)))
 
 cat("Default fullnames:\n")
 print(getFullNames(ds, translate=FALSE))
