@@ -1,0 +1,13 @@
+# Created by: Henrik B
+# Created on: 2012-09-27 23:23 GMT
+x	y	char
+1	1	r
+4	3	t
+2	7	g
+1	6	s
+6	10	f
+6	2	a
+2	4	e
+7	24	c
+8	1	g
+1	2	j
